// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-pills.vue Demo-只读、禁用、禁用某一项 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div border="true" class="root" readonly="readonly" tabindex>
      <div style="display: none;">
        <span vusion-slot-name="title">列表</span>
        <div>
        </div>
      </div>
      <div>
        <div class="root" readonly="readonly" vusion-slot-name="item">
          Apple</div>
        <div class="root" readonly="readonly" vusion-slot-name="item">
          Banana</div>
        <div class="root" readonly="readonly" selected="selected" vusion-slot-name="item">
          Cake</div>
      </div>
      <div style="display: none;">
      </div>
    </div>
    <div border="true" class="root" disabled="disabled" tabindex>
      <div style="display: none;">
        <span vusion-slot-name="title">列表</span>
        <div>
        </div>
      </div>
      <div>
        <div class="root" disabled="disabled" vusion-slot-name="item">
          Apple</div>
        <div class="root" disabled="disabled" vusion-slot-name="item">
          Banana</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="item">
          Cake</div>
      </div>
      <div style="display: none;">
      </div>
    </div>
    <div border="true" class="root" tabindex="0">
      <div style="display: none;">
        <span vusion-slot-name="title">列表</span>
        <div>
        </div>
      </div>
      <div>
        <div class="root" vusion-slot-name="item">
          Apple</div>
        <div class="root" disabled="disabled" vusion-slot-name="item">
          Banana</div>
        <div class="root" selected="selected" vusion-slot-name="item">
          Cake</div>
      </div>
      <div style="display: none;">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-pills.vue Demo-可取消 1`] = `
<div>
  <div border="true" class="root" tabindex="0">
    <div style="display: none;">
      <span vusion-slot-name="title">列表</span>
      <div>
      </div>
    </div>
    <div>
      <div class="root" vusion-slot-name="item">
        Apple</div>
      <div class="root" vusion-slot-name="item">
        Banana</div>
      <div class="root" selected="selected" vusion-slot-name="item">
        Cake</div>
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-pills.vue Demo-基本用法 1`] = `
<div>
  <div border="true" class="root" tabindex="0">
    <div style="display: none;">
      <span vusion-slot-name="title">列表</span>
      <div>
      </div>
    </div>
    <div>
      <div class="root" vusion-slot-name="item">
        Apple</div>
      <div class="root" vusion-slot-name="item">
        Banana</div>
      <div class="root" vusion-slot-name="item">
        Cake</div>
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-pills.vue Demo-多项选择 1`] = `
<div>
  <div border="true" class="root" tabindex="0">
    <div style="display: none;">
      <label class="root" tabindex="0">
        <span class="box" status="false"></span>
        <span vusion-slot-name="item"> </span>
      </label>
      <span vusion-slot-name="title">列表</span>
      <div>
        <span>2</span>
      </div>
    </div>
    <div>
      <div class="root" vusion-slot-name="item">
        Apple</div>
      <div class="root" selected="selected" vusion-slot-name="item">
        Banana</div>
      <div class="root" selected="selected" vusion-slot-name="item">
        Cake</div>
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-pills.vue Demo-选择值 1`] = `
<div>
  <div border="true" class="root" tabindex="0">
    <div style="display: none;">
      <span vusion-slot-name="title">列表</span>
      <div>
      </div>
    </div>
    <div>
      <div class="root" vusion-slot-name="item">
        Apple</div>
      <div class="root" vusion-slot-name="item">
        Banana</div>
      <div class="root" selected="selected" vusion-slot-name="item">
        Cake</div>
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;
